# gv_recon

./: CMakeCache.txt  CMakeLists.txt  ExtrinsicFile.txt  README.md  TimeMeasures.txt  mesh.proto  mesh_data_chair.txt  mesh_data_floor.txt  mesh_data_person.txt  mesh_data_table.txt  mesh_data_tv.txt  mesh_data_wall.txt  package.xml
cmake/: FindAzureKinect.cmakeNONO  FindMimalloccmake  Findstatgrab.cmake
config/: config.yaml
include/: FastQuadric.h  MCdefines.h  MCtables.h  Simplify.h  glDefines.h  kernelCall.h  kernels.h  marchingCubes.h  marchingCubes_kernel.h  sMatrix.h
include/SHM/: SharedMemoryManager.hpp  mesh.pb.cc  mesh.pb.h
include/cuda/: DeviceKernel.h  marchingCubes_kernel.h
launch/: main.launch.py
src/: FastQuadric.cpp  SyncedSubNode.cpp  SyncedSubNode.h  az_yoso.cpp  kernelCall.cu  main.cpp  marchingCubes.cpp
src/cuda/: DeviceKernel.cu  kernels.cu  marchingCubes_kernel.cu
src/marchingCubes/: marchingCubes.cpp  marchingCubes.cu  marchingCubes.h  marchingCubes_kernel.cu  marchingCubes_kernel.cuh
